--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -44,7 +44,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-block d-lg-none">
+        <a href="/article_list" class="navbar-brand d-block d-lg-none" target="_blank">
             <h1 class="text-primary fw-bold m-0">게시판</h1>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,7 +56,7 @@
                 <a href="#about" class="nav-item nav-link">내소개</a>
                 <a href="#skill" class="nav-item nav-link">기술경험</a>
             </div>
-            <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
+            <a href="/article_list" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block" target="_blank">
                 <h1 class="text-primary fw-bold m-0">게시판</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
